@@ -1,18 +1,20 @@
 /**************************************************************************************************
-* @(#)AboutAction.java
-*
-*
-*
-*************************************************************************************************/
+ * @(#)AboutAction.java 
+ *
+ *
+ *
+ *************************************************************************************************/
 package gov.epa.otaq.moves.master.gui;
+
 import javax.swing.Action;
+
 /**
-* Class for MOVES About menu option.
-*
-* @author		Cimulus
-* @author		EPA-elg
-* @author		EPA-hmc
-* @version		2006-12-27
+ * Class for MOVES About menu option.
+ *
+ * @author		Cimulus
+ * @author		EPA-elg 
+ * @author		EPA-hmc
+ * @version		2006-12-27
 **/
 public class AboutAction extends JLFAbstractAction {
 	/** Constant command key text. **/
@@ -26,11 +28,12 @@ public class AboutAction extends JLFAbstractAction {
 	/** Constant short description text. **/
 	static final String SHORT_DESCRIPTION_ABOUT = "About MOVES";
 	/** Constant long description text. **/
-	static final String LONG_DESCRIPTION_ABOUT = "MOVES2014b December 2018 Technical Update";
+	static final String LONG_DESCRIPTION_ABOUT = "MOVES3";
 	/** Constant mnemonic key. **/
 	static final int MNEMONIC_KEY_ABOUT = 'A';
+
 	/**
-	 * Implements the About menu option UI, including command keys, name,
+	 * Implements the About menu option UI, including command keys, name, 
 	 * descriptions, and icons.
 	**/
 	public AboutAction() {
@@ -39,7 +42,7 @@ public class AboutAction extends JLFAbstractAction {
 		putValue(LARGE_ICON, getIcon(LARGE_ICON_ABOUT));
 		putValue(Action.SHORT_DESCRIPTION, SHORT_DESCRIPTION_ABOUT);
 		putValue(Action.LONG_DESCRIPTION, LONG_DESCRIPTION_ABOUT);
-		putValue(Action.MNEMONIC_KEY, new Integer(MNEMONIC_KEY_ABOUT));
+		putValue(Action.MNEMONIC_KEY, Integer.valueOf(MNEMONIC_KEY_ABOUT));
 		putValue(Action.ACTION_COMMAND_KEY, ACTION_COMMAND_KEY_ABOUT);
 	}
 }
