@@ -40,7 +40,7 @@ public class ClearAction extends JLFAbstractAction {
 		putValue(LARGE_ICON, getIcon(LARGE_ICON_CLEAR));
 		putValue(Action.SHORT_DESCRIPTION, SHORT_DESCRIPTION_CLEAR);
 		putValue(Action.LONG_DESCRIPTION, LONG_DESCRIPTION_CLEAR);
-		putValue(Action.MNEMONIC_KEY, new Integer(MNEMONIC_KEY_CLEAR));
+		putValue(Action.MNEMONIC_KEY, Integer.valueOf(MNEMONIC_KEY_CLEAR));
 		putValue(Action.ACTION_COMMAND_KEY, ACTION_COMMAND_KEY_CLEAR);
 	}
 }
