@@ -41,7 +41,7 @@ public class CutAction extends JLFAbstractAction {
 		putValue(LARGE_ICON, getIcon(LARGE_ICON_CUT));
 		putValue(Action.SHORT_DESCRIPTION, SHORT_DESCRIPTION_CUT);
 		putValue(Action.LONG_DESCRIPTION, LONG_DESCRIPTION_CUT);
-		putValue(Action.MNEMONIC_KEY, new Integer(MNEMONIC_KEY_CUT));
+		putValue(Action.MNEMONIC_KEY, Integer.valueOf(MNEMONIC_KEY_CUT));
 		putValue(Action.ACTION_COMMAND_KEY, ACTION_COMMAND_KEY_CUT);
 	}
 }
