@@ -45,7 +45,7 @@ public class ExportToPechanAction extends JLFAbstractAction {
 //		putValue(LARGE_ICON, getIcon(LARGE_ICON_EXPORT_TO_PECHAN));
 		putValue(Action.SHORT_DESCRIPTION, SHORT_DESCRIPTION_EXPORT_TO_PECHAN);
 		putValue(Action.LONG_DESCRIPTION, LONG_DESCRIPTION_EXPORT_TO_PECHAN);
-//		putValue(Action.MNEMONIC_KEY, new Integer(MNEMONIC_KEY_EXPORT_TO_PECHAN));
+//		putValue(Action.MNEMONIC_KEY, Integer.valueOf(MNEMONIC_KEY_EXPORT_TO_PECHAN));
 		putValue(Action.ACTION_COMMAND_KEY, ACTION_COMMAND_KEY_EXPORT_TO_PECHAN);
 	}
 }
