@@ -39,7 +39,7 @@ public class PauseAction extends JLFAbstractAction {
 		putValue(LARGE_ICON, getIcon(LARGE_ICON_PAUSE));
 		putValue(Action.SHORT_DESCRIPTION, SHORT_DESCRIPTION_PAUSE);
 		putValue(Action.LONG_DESCRIPTION, LONG_DESCRIPTION_PAUSE);
-//		putValue(Action.MNEMONIC_KEY, new Integer(MNEMONIC_KEY_PAUSE));
+//		putValue(Action.MNEMONIC_KEY, Integer.valueOf(MNEMONIC_KEY_PAUSE));
 		putValue(Action.ACTION_COMMAND_KEY, ACTION_COMMAND_KEY_PAUSE);
 	}
 }
