@@ -40,7 +40,7 @@ public class SaveAction extends JLFAbstractAction {
 		putValue(LARGE_ICON, getIcon(LARGE_ICON_SAVE));
 		putValue(Action.SHORT_DESCRIPTION, SHORT_DESCRIPTION_SAVE);
 		putValue(Action.LONG_DESCRIPTION, LONG_DESCRIPTION_SAVE);
-		putValue(Action.MNEMONIC_KEY, new Integer(MNEMONIC_KEY_SAVE));
+		putValue(Action.MNEMONIC_KEY, Integer.valueOf(MNEMONIC_KEY_SAVE));
 		putValue(Action.ACTION_COMMAND_KEY, ACTION_COMMAND_KEY_SAVE);
 	}
 }
